testsuite/tests/typecheck/should_fail/PatSynExistential.hs
{-# language PatternSynonyms #-}

module PatSynExistential where

pattern P :: () => forall x. x -> Maybe x
pattern P <- _
